k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lorcana-proxy
  labels:
    app.kubernetes.io/name: lorcana-proxy
    app.kubernetes.io/part-of: lorcana-proxy-print
